# gmp

./: .Rbuildignore  ChangeLog  Changes  DESCRIPTION  Done  NAMESPACE  TODO  cleanup  configure  configure.ac
.github/workflows/: check.yml
R/: AllClasses-etc.R  Stirling-n-etc.R  biginteger.R  bigq.R  matrix-prods.R  matrixz.R  zzz.R
man/: BernoulliQ.Rd  Oakley.Rd  Stirling.Rd  add.biginteger.Rd  apply.Rd  asNumeric.Rd  base-copies.Rd  biginteger.Rd  biginteger.rand.Rd  bigrational.Rd  binomQ.Rd  comp.biginteger.Rd  comp.bigq.Rd  cumsum.Rd  extract.Rd  extreme.Rd  factor.Rd  factorialZ.Rd  fibonacci.Rd  formatN.Rd  frexpZ.Rd  gcd.Rd  gcdex.Rd  is.whole.Rd  isprime.Rd  matrix.Rd  modulus.Rd  nextprime.Rd  operators_bigq.Rd  powm.Rd  roundQ.Rd  sizeinbase.Rd  solve.Rd  utils.Rd
src/: Makevars.in  Makevars.win  Rgmp.h  apply.cc  apply.h  biginteger.cc  biginteger.h  bigintegerR.cc  bigintegerR.h  bigmod.cc  bigmod.h  bigrational.cc  bigrational.h  bigrationalR.cc  bigrationalR.h  bigvec.cc  bigvec.h  bigvec_q.cc  bigvec_q.h  extract_matrix.cc  extract_matrix.h  factor.cc  factor.h  factorize.cc  factorize.h  init.cc  matrix.cc  matrix.h  matrixq.cc  matrixq.h  solve.cc  solve.h  templateMatrix.h
tests/: arith-ex.R  basic-ex.R  gmp-test.R  gmp-test.Rout.save
